# ohos_tutorial

./: CMakeLists.txt  build_hello.sh  checkout_ohos_sdk.sh
mac-sdk-full/: .gitignore  ohos_sdk.sh
src/: CMakeLists.txt  hello.cpp  sum.cpp
